# csd3183-finalproject

./: .gitattributes  .gitignore  DEMO_SCRIPT.md  PRESENTATION_QA.md  README.md  UpgradeLog.htm  UpgradeLog2.htm  csd3183_finalproject.sln
Assets/: SimulationSettingsUI_2.prefab  TerrainManager.prefab
Assets/Prefabs/: AgentPrefab.prefab
Assets/Resources/: SimulationSettingsUI.prefab
Assets/Scenes/: SampleScene.unity  TerrainTestScene.unity  TestPrefabs.unity  UI-Test.unity
Assets/Scripts/: NativeBridge.cs  NativeBridgeTest.cs
Assets/Scripts/AStar/: AStarAgent.cs  AStarGridManager.cs  Line Mat.mat  NPCWanderer.cs
Assets/Scripts/Agent/: AgentDeathVisual.cs  AgentGOAP.cs  AgentOverlayUI.cs  AgentStats.cs  AgentStatusBars.cs  FogOfWarOverlay.cs  FoodSoundCue.cs  ImpairmentVisuals.cs  SlamCoordinator.cs  SlamDiscoveryBeacons.cs  UnityAgent.cs
Assets/Scripts/Agent/GOAP/: AgentAction.cs
Assets/Scripts/Agents/: AgentController.cs  AgentManager.cs
Assets/Scripts/LevelEditor/: Canvas.prefab  DraggablePropIcon.cs  GhostPreview.mat  GridInteractionManager.cs  GridSaveSystem.cs  GridVisualizer.cs  IconButtonLayout.prefab  LevelButtonPrefab.prefab  MenuToggle.cs  ObstacleGrid.cs  PaletteUI.cs  ProceduralGeneration.cs  PropLibrary.asset  PropLibrary.cs
Assets/Scripts/LevelEditor/Editor/: PropLibraryEditor.cs
Assets/Scripts/Terrain/: GridCoordinator.cs  GridNode.cs  GridSaveSchema.cs  GridSaveSystem.cs  HouseConstructionSite.cs  KenneyTileConfiguration.cs  PathfindingNode.cs  PrimsPathNetworkBuilder.cs  PrimsTerrainGenerator.cs  SeamlessGridGenerator.cs  TerrainEnums.cs
Assets/Scripts/UIEvents/: SimulationEvents.cs  SimulationGameplayBridge.cs  SimulationManager.cs  SimulationUIBootstrap.cs  SimulationUIController.cs  SimulationUIController_2.cs
Assets/Scripts/Utility/: CameraController.cs  CameraControllerTemp.cs  ScaleCompensation.cs  WorldBar.cs
Assets/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/: Bangers SDF.asset  Electronic Highway Sign SDF.asset
Assets/TextMesh Pro/Resources/Fonts & Materials/: LiberationSans SDF - Fallback.asset
Assets/UI/: SimulationSettingsUI.prefab
NativePlugin/: CMakeLists.txt  NativePathfinderBridge.cs  test_main.cpp
NativePlugin/API/: PluginAPI.cpp
NativePlugin/core/: AgentProfile.h
NativePlugin/goap/: Action.h  AgentActions.h  GOAPPlanner.cpp  GOAPPlanner.h  WorldState.h
NativePlugin/navigation/: AStarGrid.cpp  AStarGrid.h  AStarPathfinder.cpp  AStarPathfinder.h  Agent.cpp  Agent.h
NativePlugin/spatial/: AgentMemory.h  MapLayer.h  Perception.h  WorldGrid.h
PathfinderCore/: AStarGrid.cpp  AStarGrid.h  Agent.cpp  Agent.h  PathNetwork.cpp  PathNetwork.h  PathfinderCore.vcxproj  PathfinderCore.vcxproj.filters  PluginMain.cpp
PathfinderCore/goap/: Action.h  AgentActions.h  GOAPPlanner.cpp  GOAPPlanner.h  WorldState.h
PathfinderCore/spatial/: AgentMemory.h  MapLayer.h  Perception.h  WorldGrid.h
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
